--- a/Pages/booking.html
+++ b/Pages/booking.html
@@ -21,16 +21,16 @@
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 font-weight-bold" id="navbarToggler">
                 <ul class="navbar-nav mr-auto ml-2">
                     <li class="nav-item">
-                        <a class="nav-link nav-a2 home" href="HandyMan.html">Accueil</a>
+                        <a class="nav-link nav-a2 home" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-a2 active styles d-none" href="HandyMan.html#styles">styles</a>
+                        <a class="nav-link nav-a2 active styles d-none" href="../index.html#styles">styles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-a2 services" href="HandyMan.html#services">Services</a>
+                        <a class="nav-link nav-a2 services" href="../index.html#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-a2 team" href="HandyMan.html#team">A propos</a>
+                        <a class="nav-link nav-a2 team" href="../index.html#team">A propos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-a contact" href="#contact">Nous joindre</a>
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="HandyMan.html"><img src="../Images/logoblack.jpg" alt="HandyMan"></a>
+                <a class="navbar-brand mx-auto" href="../index.html"><img src="../Images/logoblack.jpg" alt="HandyMan"></a>
             </div>
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 font-weight-bold">
                 <ul class="navbar-nav ml-auto">
@@ -185,7 +185,7 @@
                               <textarea id="message" name="client_message" placeholder="Dites ce que vous pensez ou si vous avez des requêtes"></textarea>
                             </div>
                             <button id="rdvSubmit" class="btn rounded-pill" type="submit">Prendre rendez-vous</button>
-                          </form>
+                        </form>
                     </div>
                     <div class="col col-two ml-5 w-100">
                         <div class="flex-container">
