--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Pages/CSS/Carousel.css">
-    <link rel="stylesheet" href="../Pages/CSS/index.css">
+    <link rel="stylesheet" href="./Pages/CSS/Carousel.css">
+    <link rel="stylesheet" href="./Pages/CSS/index.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script type="module" src="../Pages/JS/index.js"></script>
+    <script type="module" src="./Pages/JS/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <title>HandyMan</title>
 </head>
@@ -39,12 +39,12 @@
                 </ul>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="#"><img src="../Images/logoblack.jpg" alt="HandyMan"></a>
+                <a class="navbar-brand mx-auto" href="#"><img src="./Images/logoblack.jpg" alt="HandyMan"></a>
             </div>
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 font-weight-bold">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="booking.html">
+                        <a class="nav-link" href="./Pages/booking.html">
                             <button type="button" id="nav_rdv_btn" class="rounded-pill btn btn-outline-warning">
                                 Prendre rendez-vous
                             </button>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col" id="div_btn_rdv" style="height: max-content;">
-                    <a href="booking.html">
+                    <a href="./Pages/booking.html">
                         <button id="btn_rdv" class="btn btn-outline-warning btn-lg h5" style="height: 93px; width: fit-content; border-radius: 12px;">
                             Prendre rendez-vous
                         </button>
@@ -96,7 +96,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/2 pièces.webp" 
+                                src="./Images/Styles/2 pièces.webp" 
                                 alt="Costume 2 pièces" 
                                 width="421px" 
                                 height="600px" 
@@ -110,7 +110,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/3 pièces.jpg" 
+                                src="./Images/Styles/3 pièces.jpg" 
                                 alt="Costume 3 pièces" 
                                 width="421px" 
                                 height="600px" 
@@ -124,7 +124,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/col mao.jpg" 
+                                src="./Images/Styles/col mao.jpg" 
                                 alt="Costume col mao" 
                                 width="421px" 
                                 height="600px" 
@@ -138,7 +138,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/croisé.jpg" 
+                                src="./Images/Styles/croisé.jpg" 
                                 alt="Costume croisé" 
                                 width="421px" 
                                 height="600px" 
@@ -152,7 +152,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/smoking.jpg" 
+                                src="./Images/Styles/smoking.jpg" 
                                 alt="Smoking" 
                                 width="421px" 
                                 height="600px" 
@@ -166,7 +166,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/tweed.jpeg" 
+                                src="./Images/Styles/tweed.jpeg" 
                                 alt="Costume tweed" 
                                 width="421px" 
                                 height="600px" 
@@ -180,7 +180,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="../Images/Styles/lin.jpeg" 
+                                src="/Images/Styles/lin.jpeg" 
                                 alt="Costume en lin" 
                                 width="421px" 
                                 height="600px" 
@@ -225,7 +225,7 @@
             </div>
             <div class="row service-row text-white p-0 m-0 d">
                 <div class="col service-img m-0 p-0 two">
-                    <img src="../Images/Services/confection.jpg" height="797px" width="1276px" alt="confection de costumes">
+                    <img src="./Images/Services/confection.jpg" height="797px" width="1276px" alt="confection de costumes">
                 </div>
                 <div class="col p-0 m-0 one">
                     <div class="ml-0 service-txt">
@@ -237,7 +237,7 @@
                                 Nos stylistes n'ont qu'un seul objectif, vous offrir un travail qualitatif
                                 qui saura s'inscrire dans la durabilité.
                             </p>
-                            <a style="color: white;" href="booking.html">Prendre rendez-vous</a>
+                            <a style="color: white;" href="./Pages/booking.html">Prendre rendez-vous</a>
                         </div>
                     </div>
                 </div>
@@ -252,12 +252,12 @@
                                 Il vise à assurer votre satisfaction complète et à faire en sorte 
                                 que votre costume soit le plus proche possible de ce que vous avez imaginé.
                             </p>
-                            <a style="color: black;" href="booking.html">Prendre rendez-vous</a>
+                            <a style="color: black;" href="./Pages/booking.html">Prendre rendez-vous</a>
                         </div>
                     </div>
                 </div>
                 <div class="col service-img p-0 m-0 two">
-                    <img src="../Images/Services/retouche.webp" height="797px" width="1276px" alt="retouche de costumes">
+                    <img src="./Images/Services/retouche.webp" height="797px" width="1276px" alt="retouche de costumes">
                 </div>
             </div>
             <div class="row service-row text-white p-0 m-0">
@@ -273,7 +273,7 @@
                                 de nottoyage possède une grande expertise dans la manière dont il faut prendre 
                                 soin d'un costume et comment lui redonner son éclat original.
                             </p>
-                            <a style="color: white;" href="booking.html">Prendre rendez-vous</a>
+                            <a style="color: white;" href="./Pages/booking.html">Prendre rendez-vous</a>
                         </div>
                     </div>
                 </div>
@@ -288,12 +288,12 @@
                                 sont utilisés pour la confection ? Vous avez des questions d'ordre général ?
                                 N'hésitez pas à nous contacter et un de nos stylistes se fera un plaisir de vous répondre. 
                             </p>
-                            <a style="color: black;" href="booking.html">Prendre rendez-vous en ligne</a>
+                            <a style="color: black;" href="./Pages/booking.html">Prendre rendez-vous en ligne</a>
                         </div>
                     </div>
                 </div>
                 <div class="col service-img p-0 m-0 two">
-                    <img src="../Images/Services/online.jpg" height="797px" width="1276px" alt="consultation en ligne">
+                    <img src="./Images/Services/online.jpg" height="797px" width="1276px" alt="consultation en ligne">
                 </div>
             </div>
         </div>
@@ -302,7 +302,7 @@
             <div class="flex-container" style="width: 80%;">
                 <div class="text-white p-4 mb-2 row" style="height: fit-content;">
                     <div class="col d-none d-lg-block">
-                        <img src="../Images/logoyellow.jpg" alt="logo jaune">
+                        <img src="./Images/logoyellow.jpg" alt="logo jaune">
                     </div>
                     <div class="col h1" style="text-align: center;">Notre équipe</div>
                     <div class="col d-none d-lg-block"></div>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="row team-row mb-5">
                         <div class="col mr-3 team-img m-0 p-0 position-relative" id="icon-hover-div">
-                            <img src="../Images/stylistes/styliste1.jpg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste1.jpg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Roberto</p>
@@ -334,7 +334,7 @@
                             </div>
                         </div>
                         <div class="col mr-3 team-img m-0 p-0 position-relative">
-                            <img src="../Images/stylistes/styliste2.jpg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste2.jpg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Annabelle</p>
@@ -346,7 +346,7 @@
                             </div>
                         </div>
                         <div class="col team-img m-0 p-0 position-relative">
-                            <img src="../Images/stylistes/styliste 4.jpeg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste 4.jpeg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Stéphane</p>
@@ -361,7 +361,7 @@
                     </div>
                     <div class="row team-row mb-5">
                         <div class="col mr-3 team-img m-0 p-0 position-relative" id="icon-hover-div">
-                            <img src="../Images/stylistes/styliste3.jpg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste3.jpg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Moustapha</p>
@@ -374,7 +374,7 @@
                             </div>
                         </div>
                         <div class="col mr-3 team-img m-0 p-0 position-relative">
-                            <img src="../Images/stylistes/styliste5.jpeg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste5.jpeg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Ernesto</p>
@@ -388,7 +388,7 @@
                             </div>
                         </div>
                         <div class="col team-img m-0 p-0 position-relative">
-                            <img src="../Images/stylistes/styliste 6.jpg" height="100%" width="100%" alt="shinji">
+                            <img src="./Images/stylistes/styliste 6.jpg" height="100%" width="100%" alt="shinji">
                             <div class="position-absolute imagetxt" style="text-align: center;">
                                 <div class="d-block position-absolute">
                                     <p class="imagetxt_title" style="font-size: 1.7vw;">Marta</p>
@@ -409,7 +409,7 @@
         <footer style="overflow-x: hidden;" id="contact" class="section">
             <div class="row flex-container3 ml-auto mr-auto footer-row" style="width: 80%; color: white;">
                 <div class="col p-0" style="width: fit-content;">
-                    <img src="../Images/logoyellow.jpg" alt="logo">
+                    <img src="./Images/logoyellow.jpg" alt="logo">
                     <div class="position-relative d-about">
                         <p style="font-size: 1vw;">The HandyMan est une entreprise de confection de costumes 
                             de haute qualité pour hommes.
