--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
             <div class="row service-row text-white p-0 m-0">
                 <div class="col service-img m-0 p-0 two">
-                    <img src="../Images/Services/pressing.jpg" height="797px" width="1276px" alt="nettoyage de costumes">
+                    <img src="./Images/Services/pressing.jpg" height="797px" width="1276px" alt="nettoyage de costumes">
                 </div>
                 <div class="col p-0 m-0 one">
                     <div class="service-txt ml-0">
