--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <li class="item">
                             <figure>
                                 <img 
-                                src="/Images/Styles/lin.jpeg" 
+                                src="./Images/Styles/lin.jpeg" 
                                 alt="Costume en lin" 
                                 width="421px" 
                                 height="600px" 
